--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
+    "date-fns": "^2.30.0",
+    "mongoose": "^7.1.0",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,10 +25,16 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "express": "^4.18.2",
+    "image-downloader": "^4.3.0",
+    "jsonwebtoken": "^9.0.0",
     "vite": "^4.3.2"
   }
 }
